--- a/inicio.html
+++ b/inicio.html
@@ -16,11 +16,14 @@
     <div class="cabeçalho">
             <img class="logo" src="img/logo em boa qualidade2.png">
             <span>
-            <p>INICIO</p>
+            <a>INICIO</a>
             </span>
-            <p>LOJAS</p>
-            <p>PRODUTOS</p>
-            <p>CONTA</p>
+            <a href="lojas.html">LOJAS</a>
+            <a>PRODUTOS</a>
+            <div class="conta">
+            <img class="icone" src="img/perfil-emoji.png">
+            <a>CONTA</a>
+        </div>
     </div>
     </header>
     <div class="imagem1"> 
@@ -45,6 +48,15 @@
         <img class="logoGrande" src="img/logo em boa qualidade2.png">
     </div>
 
-
+    <div class="cartao">
+        <img class="cartaoIMG" src="img/cartao.png">
+        <div class="pagamento">
+            <p class="pagamento2">Pagamento<br> facilitado.Compre na SENNA<br> em até 10x no cartão!<br><br><br><span3>COMPRE<br>AGORA!</p></span3>
+        </div>
+    </div>
+    <footer>
+        <img class="rodape" src="img/logo em boa qualidade2.png">
+        <p class="direitos">TODOS OS DIREITOS RESERVADOS, AUTOPEÇAS SENNA @ 2023</p>
+    </footer>
 
 </html>
