--- a/inicio.html
+++ b/inicio.html
@@ -14,15 +14,15 @@
             <P>DESCONTO DE ATÉ 20% EM TODO O SITE!</P>
         </div>
     <div class="cabeçalho">
-            <img class="logo" src="img/logo em boa qualidade2.png">
+            <img class="logo" src="img/logo arrumada.png">
             <span>
             <a>INICIO</a>
             </span>
             <a href="lojas.html">LOJAS</a>
-            <a>PRODUTOS</a>
-            <div class="conta">
-            <img class="icone" src="img/perfil-emoji.png">
-            <a>CONTA</a>
+            <a href="produtos.html">PRODUTOS</a>
+            <div class="conta" href="login.html">
+            <img class="icone" src="img/perfil-emoji.png" href="login.html">
+            <a href="login.html">CONTA</a>
         </div>
     </div>
     </header>
@@ -44,7 +44,7 @@
     </div>
 
     <div class="sobreNos">
-        <P class="sobreNos2"><span2>SOBRE NÓS</span2> <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in facilisis massa. Sed eget nunc ut metus volutpat semper. Nam posuere posuere lorem pretium viverra. Donec condimentum augue non bibendum cursus. Praesent quis ligula turpis. Proin convallis felis a nisi finibus, nec auctor lorem lobortis. Sed vehicula eu mi ac posuere. Duis semper dui non nulla dignissim, ac gravida risus ornare. In posuere volutpat sodales. Fusce a dolor quis urna euismod dictum quis sed leo. Pellentesque eu arcu sed nulla iaculis malesuada. Suspendisse congue nisi at convallis pulvinar.<br> <br> <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in facilisis massa. Sed eget nunc ut metus volutpat semper. Nam posuere posuere lorem pretium viverra. Donec condimentum augue non bibendum cursus. Praesent quis ligula turpis. Proin convallis felis a nisi finibus, nec auctor lorem lobortis. Sed vehicula eu mi ac posuere. Duis semper dui non nulla dignissim, ac gravida risus ornare. In posuere volutpat sodales. Fusce a dolor quis urna euismod dictum quis sed leo. Pellentesque eu arcu sed nulla iaculis malesuada. Suspendisse congue nisi at convallis pulvinar.</P>
+        <P class="sobreNos2"><span2>SOBRE NÓS:</span2> <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in facilisis massa. Sed eget nunc ut metus volutpat semper. Nam posuere posuere lorem pretium viverra. Donec condimentum augue non bibendum cursus. Praesent quis ligula turpis. Proin convallis felis a nisi finibus, nec auctor lorem lobortis. Sed vehicula eu mi ac posuere. Duis semper dui non nulla dignissim, ac gravida risus ornare. In posuere volutpat sodales. Fusce a dolor quis urna euismod dictum quis sed leo. Pellentesque eu arcu sed nulla iaculis malesuada. Suspendisse congue nisi at convallis pulvinar.<br> <br> <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in facilisis massa. Sed eget nunc ut metus volutpat semper. Nam posuere posuere lorem pretium viverra. Donec condimentum augue non bibendum cursus. Praesent quis ligula turpis. Proin convallis felis a nisi finibus, nec auctor lorem lobortis. Sed vehicula eu mi ac posuere. Duis semper dui non nulla dignissim, ac gravida risus ornare. In posuere volutpat sodales. Fusce a dolor quis urna euismod dictum quis sed leo. Pellentesque eu arcu sed nulla iaculis malesuada. Suspendisse congue nisi at convallis pulvinar.</P>
         <img class="logoGrande" src="img/logo em boa qualidade2.png">
     </div>
 
