--- a/lojas.html
+++ b/lojas.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SENNA</title>
     <link rel="stylesheet" href="lojas.css">
 </head>
-
 <body>
     <header>
         <div class="topo">
             <P>DESCONTO DE ATÉ 20% EM TODO O SITE!</P>
         </div>
         <div class="cabeçalho">
-            <img class="logo" src="img/logo em boa qualidade2.png">
+            <img class="logo" src="img/logo arrumada.png">
             <span>
                 <a href="inicio.html">INICIO</a>
             </span>
             <a>LOJAS</a>
-            <a>PRODUTOS</a>
+            <a href="produtos.html">PRODUTOS</a>
             <div class="conta">
                 <img class="icone" src="img/perfil-emoji.png">
                 <a>CONTA</a>
@@ -28,54 +26,52 @@
     </header>
 
     <div class="imagem1">
-        <box class="box1"></box>
-        <img class="carro" src="img/pneus.png">
-        <box class="box2"></box>
+        <img  class="nossasLojas" src="img/NOSSAS LOJAS (1).png">
+        <div class="box1"></div> 
+            <a class="texto1">ENCONTRE A LOJA MAIS PROXIMA DE VOCÊ!</a>
+        </div>
     </div>
-
-    <h1 class="NossosProdutos">NOSSOS PRODUTOS:</h1>
-
-    <div class="produtos">
-
-        <div class="produtos1">
-
+    <div class="lojas">
+        <div class="lojas1">
             <div class="cada">
-                <img class="roda" src="img/image 15.png">
-                <a class="pneu2">PNEU</a>
+                <img class="roda" src="img/Design sem nome (1).png">
+                <a class="pneu2">Ferraz De Vasconcelos-SP</a>
             </div>
-
-            <img class="roda" src="img/image 18.png">
-            <a class="pneu3">FREIO TRASSEIRO</a>
-            <img class="roda" src="img/image 24.png">
-            <a class="pneu4">FILTRO DE AR</a>
+            <div class="cada">
+                <img class="roda" src="img/Design sem nome (1).png">
+                <a class="pneu3">Suzano-SP</a>
+            </div>
         </div>
-
-
-        <div class="produtos2">
-            <img class="roda" src="img/image 16.png">
-            <a class="pneu2">FREIO</a>
-            <img class="roda" src="img/image 19.png">
-            <a class="pneu3">PASTILHA DE FREIO</a>
-            <img class="roda" src="img/image 25.png">
-            <a class="pneu4">BOMBA DE ÁGUA</a>
-
+        <div class="lojas2">
+            <div class="cada">
+                <img class="roda" src="img/Design sem nome (1).png">
+                <a class="pneu2">Guainases-SP</a>
+            </div>
+            <div class="cada">
+                <img class="roda" src="img/Design sem nome (1).png">
+                <a class="pneu3">Poá-SP</a>
+            </div>
         </div>
-
-
-        <div class="produtos3">
-
-            <img class="roda" src="img/image 17.png">
-            <a class="pneu2">AMORTECEDOR</a>
-            <img class="roda" src="img/image 20.png">
-            <a class="pneu3">PISCA SETA</a>
-            <img class="roda" src="img/image 26.png">
-            <a class="pneu4">CABO DE VELA</a>
-
-        </div>
-
-
+            <div class="lojas3">
+                <div class="cada">
+                    <img class="roda" src="img/Design sem nome (1).png">
+                    <a class="pneu2">Itaim Paulista-SP</a>
+                </div>
+                <div class="cada">
+                    <img class="roda" src="img/Design sem nome (1).png">
+                    <a class="pneu3">Itaquaquecetuba-SP</a>
+                </div>
+            </div>
     </div>
-
+    <div class="cartao">
+        <img class="cartaoIMG" src="img/cartao.png">
+        <div class="pagamento">
+            <p class="pagamento2">Pagamento<br> facilitado.Compre na SENNA<br> em até 10x no cartão!<br><br><br><span3>COMPRE<br>AGORA!</p></span3>
+        </div>
+    </div>
+    <footer>
+        <img class="rodape" src="img/logo em boa qualidade2.png">
+        <p class="direitos">TODOS OS DIREITOS RESERVADOS, AUTOPEÇAS SENNA @ 2023</p>
+    </footer>
 </body>
-
 </html>
